# boidsECS

./: CMakeLists.txt  ECS.hpp  a.out  boidsECS.sln  boidsECS.vcxproj  boidsECS.vcxproj.filters  build.xsh  build_and_run_boids_and_clang_tidy.bash  build_and_run_tests.bash  build_debug.bash  clean_build_dir.bash  commands.md  gmeta.hpp  helpers.hpp  main.cpp  run_tests.bash  tests.cpp
boidsECS/: CMakeLists.txt  ECS.hpp  bresenham.cpp  bresenham.hpp  bresenham_visutool.hpp  conanfile.txt  flocon_generator.hpp  frag.glsl  gmeta.hpp  helpers.cpp  helpers.hpp  main.cpp  smash_game.hpp  usings.hpp
test/: CMakeLists.txt  CTestConfig.cmake  ECS.test.cpp  bresenham.test.cpp  conanfile.txt  flocon_generator.test.cpp  gmeta.test.cpp  smash_game.test.cpp
x64/Debug/: boidsECS.exe.recipe  boidsECS.ilk  boidsECS.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/boidsECS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  boidsECS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: boidsECS.exe.recipe  boidsECS.iobj  boidsECS.ipdb  boidsECS.vcxproj.FileListAbsolute.txt
x64/Release/boidsECS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  boidsECS.lastbuildstate  boidsECS.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
